# Spider-Fish

./: .gitignore  CMakeLists.txt  Game.cpp  GameObject.cpp  GameObject.h  README.markdown  Ship.cpp  Ship.h  SpiderFishGame.cpp  SpiderFishGame.h  Sprite.cpp  Sprite.h  SpriteManager.cpp  SpriteManager.h  Types.h  main.cpp
SpiderFish/: SpiderFish-Prefix.pch  ifAppDelegate.h  ifAppDelegate.m  main.m
SpiderFish.xcodeproj/: project.pbxproj
SpiderFish.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SpiderFish/en.lproj/: MainMenu.xib
example_code/: EntityCollision.js
glfw-src/Spider-Fish/: GameType.h  Object.cpp  Object.h  Shader.cpp  Shader.h  Ship.cpp  Ship.h  SpiderFish.cpp  SpiderFish.h  fragment.shader  main.cpp  resources.h  ship.fragment  ship.vertex  vertex.shader
glfw-src/Spider-Fish/Spider-Fish/: Spider-Fish-Info.plist  Spider-Fish-Prefix.pch
glfw-src/Spider-Fish/Spider-Fish.xcodeproj/: project.pbxproj
glfw-src/Spider-Fish/Spider-Fish.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
glfw-src/Spider-Fish/Spider-Fish.xcodeproj/project.xcworkspace/xcuserdata/drakej.xcuserdatad/: UserInterfaceState.xcuserstate
glfw-src/Spider-Fish/Spider-Fish.xcodeproj/xcuserdata/drakej.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
glfw-src/Spider-Fish/Spider-Fish.xcodeproj/xcuserdata/drakej.xcuserdatad/xcschemes/: Spider-Fish.xcscheme  xcschememanagement.plist
glfw-src/Spider-Fish/mac/: Spider-Fish-Info.plist  resources.mm
glfw-src/Spider-Fish/windows/: resources.cpp
resources/levels/: leveGen.py
src/: .gitignore  Bullet.cpp  Bullet.h  CMakeLists.txt  EnemyData.cpp  EnemyData.h  EnemyPeeShooter.cpp  EnemyPeeShooter.h  EnemyShip.cpp  EnemyShip.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameScene.h  ImageManager.cpp  ImageManager.h  OrbBullet.cpp  OrbBullet.h  PhysicalEntity.cpp  PhysicalEntity.h  PlayerShip.cpp  PlayerShip.h  Ship.cpp  Ship.h  ShipHalo.cpp  ShipHalo.h  SingleShooter.cpp  SingleShooter.h  SpiderFish.h.in  SpiderFishGame.cpp  SpiderFishGame.h  SpifiDirector.h  Sprite.cpp  Sprite.h  SpriteManager.cpp  SpriteManager.h  Weapon.cpp  Weapon.h  main.cpp
src/Collision/: BruteForceSpace.cpp  BruteForceSpace.h  CollisionManager.cpp  CollisionManager.h  CollisionManger.cpp  CollisionSpace.cpp  CollisionSpace.h  PhysicalEntity.cpp  PhysicalEntity.h
src/Core/: EventService.h  IDirector.h  IScene.h  types.h
src/Event/Game/: ButtonEvent.h  DrawEvent.h  GameEvent.h  GameSubscriber.h  KeyEvent.h  MotionEvent.h  PositionEvent.h  UpdateEvent.h
src/GameObject/: GameObject.h  Halo.h
src/Util/: AnyForwardIterator.cpp  AnyForwardIterator.h  FauxContainer.cpp  FauxContainer.h  Iterator2D.cpp  Iterator2D.h  IteratorIterator.cpp  IteratorIterator.h  ObjectPool.cpp  ObjectPool.h
test/: dummy_test.cpp
